# validir

./: README.md  pyproject.toml  tox.ini
src/dir_validate/: template.py  template.py.bak
src/validir/: cli.py  template.py  types.py  validate.py
tests/: sample_template_1.yaml  test_generate.py  test_io.py  test_parsing.py  test_validate.py  test_validir.py
tests/directories/: README.md
tests/directories/generated_templates/: extra_directory_no_hidden.yaml
tests/directories/validation_templates/: README.md
tests/directories/validation_templates/extra_directory/valid/: extra_directory_hidden.yaml  extra_directory_no_hidden.yaml  extras.yaml  hidden.yaml
tests/directories/validation_templates/missing_directory/valid/: extras.yaml  hidden.yaml  missing_directory_hidden.yaml  missing_directory_no_hidden.yaml  trivial.yaml
tests/directories/validation_templates/simple_directory/invalid/: directories.yaml  directories2.yaml  hidden.yaml  hidden2.yaml  missing_file.yaml
tests/directories/validation_templates/simple_directory/valid/: baseline.yaml  directories.yaml  extension_checks.yaml  hidden.yaml  simple_directory_no_hidden.yaml
tests/example_templates/: README.md  invalid_template1.yaml  invalid_template2.yaml  invalid_template3.yaml  invalid_template4.yaml  invalid_template5.yaml  invalid_template6.yaml  valid_template1.yaml  valid_template2.yaml  valid_template3.yaml  valid_template4.yaml  valid_template5.yaml  valid_template6.yaml
tests/expected/: simple_directory_hidden.yaml
