[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dir_validate"
version = "0.0.1"
authors = [
  { name="Daniel M. Sahu", email="danielmohansahu@gmail.com" },
]
description = "Directory structure template-based validation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danielmohansahu/dir_validate"
"Bug Tracker" = "https://github.com/danielmohansahu/dir_validate/issues"
